[package]
name = "faster2"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kseq = "0.5.2"
clap = "3.2.25"
prettytable-rs = "^0.10"
indicatif = "0.17.8"
colored = "2"
human-repr = "1"
serde_json = "1.0.114"

